<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_registro_2"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/registrar_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registrar_contraseña"
        android:inputType="textPassword"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="#4A5A5959"
        android:textColorLink="#232121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        android:textColor="@android:color/background_dark"/>

    <EditText
        android:id="@+id/registrar_confirm_cotra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/registrar_confirm_cotra"
        android:inputType="textPassword"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="#4A5A5959"
        android:textColorLink="#232121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        android:textColor="@android:color/background_dark"/>

    <Button
        android:id="@+id/btn_Registrar"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/button_rounded_border"
        android:onClick="Registrar_persona"
        android:text="@string/BotonRegistrarPersona2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrar_confirm_cotra"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/btn_volver_atras_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_roudend"
        android:onClick="Volver_atras_registro"
        android:text="@string/BotonVolverAtrasRegistro2"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Registrar"
        app:layout_constraintVertical_bias="0.114" />
</androidx.constraintlayout.widget.ConstraintLayout>